# Projeto_SOE_2025_2

./: README.md
cpp_detection/: CMakeLists.txt  README.md  build.sh  detection_test.cpp
cpp_detection/model/: coco.test_names
